# project-approvel-open-env

./: .env  .gitignore  Dockerfile  README.md  app.py  environment.py  fix.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tasks/: easy.py  hard.py  medium.py
