[project]
name = "project-approvel-open-env"
version = "0.1.0"
description = "Project Approval OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openenv-core>=0.2.0"]

[project.scripts]
server = "app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
name = "project-approvel-open-env"
version = "0.1.0"
description = "Project Approval Environment"
tags = ["openenv", "project-approval", "rl"]
